Adding links to repos

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     Build a Crystal Collector game.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                      <a href="https://and-rasta.github.io/unit-4-game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/unit-4-game"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">10/13/18</small>
                   </div>
@@ -148,8 +148,8 @@
                     Build a JavaScript Trivia Game</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                      <a href="https://and-rasta.github.io/TriviaGame/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/TriviaGame"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">10/20/18</small>
                   </div>
@@ -164,8 +164,8 @@
                     Use GIPHY API to build a dynamic gif search page. Call the API & use JavaScript & jQuery to update the site HTML</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                      <a href="https://and-rasta.github.io/GifTastic/"> <button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/GifTastic"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">10/27/18</small>
                   </div>
@@ -181,8 +181,8 @@
                     Create a train scheduler app incorporating Firebase to host arrival & departure data. Retrieve and manipulate the info with Moment.js</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                      <a href="https://and-rasta.github.io/TrainScheduler/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/TrainScheduler"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">11/03/18</small>
                   </div>
@@ -197,8 +197,8 @@
                     Dothrakify - Translate song lyrics into Dothraki, using HTML, CSS/Bootstrap Framework, JavaScript, jQuery, & multiple ajax calls using the MusixMatch and Fun Translation APIs</p>                      
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                      <a href="https://and-rasta.github.io/Dothrakify/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/Dothrakify"> <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">11/10/18</small>
                   </div>
@@ -207,16 +207,16 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <a href="https://github.com/And-Rasta/liri-node-app"><img class="card2" img src="images/liri.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Project # 9</strong><br>
-                    TBD</p>  
+                  <p class="card-text"><strong>Project # 9</strong><br></a>
+                    LIRI Bot</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
-                    <small class="text-muted">11/17/18</small>
+                    <small class="text-muted">11/28/18</small>
                   </div>
                 </div>
               </div>
@@ -224,16 +224,16 @@
 
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                    <a href="https://and-rasta.github.io/Bamazon/"><img class="card2" img src="images/bamazon.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <p class="card-text"><strong>Project # 10</strong><br>
-                      TBD</p>  
+                    <p class="card-text"><strong>Project # 10</strong><br></a>
+                      Bamazon</p>  
                   <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                       </div>
-                      <small class="text-muted">11/17/18</small>
+                      <small class="text-muted">12/15/18</small>
                     </div>
                   </div>
                 </div>
@@ -241,16 +241,16 @@
 
               <div class="col-md-4">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                      <a href="https://and-rasta.github.io/Frens/"><img class="card2" img src="images/dothrakify.JPG" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text"><strong>Project # 11</strong><br>
-                        TBD</p>  
+                      <p class="card-text"><strong>Project # 11</strong><br></a>
+                        Fren Finder</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                          <a href="https://polar-beach-64550.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                          <a href="https://github.com/And-Rasta/Frens"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                         </div>
-                        <small class="text-muted">11/17/18</small>
+                        <small class="text-muted">12/22/18</small>
                       </div>
                     </div>
                   </div>
@@ -259,18 +259,68 @@
                     <div class="card mb-4 shadow-sm">
                       <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
                       <div class="card-body">
-                        <p class="card-text"><strong>Project # 12</strong><br>
-                          TBD</p>  
+                        <p class="card-text"><strong>Project # 12</strong><br></a>
+                          Burger</p>  
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                            <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                            <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                           </div>
-                          <small class="text-muted">11/17/18</small>
+                          <small class="text-muted">1/12/19</small>
                         </div>
                       </div>
                     </div>
                   </div>
+                  <div class="col-md-4">
+                      <div class="card mb-4 shadow-sm">
+                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                        <div class="card-body">
+                          <p class="card-text"><strong>Project # 13</strong><br></a>
+                            TBD</p>  
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                              <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                              <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                            </div>
+                            <small class="text-muted">1/26/19</small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                          <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                          <div class="card-body">
+                            <p class="card-text"><strong>Project # 14</strong><br></a>
+                              TBD</p>  
+                          <div class="d-flex justify-content-between align-items-center">
+                              <div class="btn-group">
+                                <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                                <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                              </div>
+                              <small class="text-muted">2/9/19</small>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-md-4">
+                          <div class="card mb-4 shadow-sm">
+                            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"><strong>Project # 15</strong><br></a>
+                                TBD</p>  
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                  <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                                  <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                                </div>
+                                <small class="text-muted">2/16/19</small>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
           </div>
         </div>
       </div>
