--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>              
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
-                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                        <a href="https://morning-springs-93758.herokuapp.com/"><img class="card2" img src="images/burdger.jpg" alt="Card image cap">
                       <div class="card-body">
                         <p class="card-text"><strong>Project # 12</strong><br></a>
                           Burger</p>  
