fuller project descriptions

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Andrasta's Git Hub</h1>
+          <a href="https://github.com/And-Rasta"><h1 class="jumbotron-heading" alt="Git Hub Repository">Andrasta's Git Hub</h1></a>
           <p class="lead text-muted">Projects created during Full Stack Development course at SMU.</p>
           <p>
             <a href="https://www.youtube.com/watch?v=OB4JDJiet5M" class="btn btn-primary my-2">Hat Tip</a>
@@ -113,6 +113,7 @@
                 <div class="card-body">
                   <p class="card-text"><strong>Project # 3</strong><br></a>
                     Build a Word Guess / Hangman game.</p>
+                    <p>Use HTML, CSS, Bootstrap CSS Framework, JavaScript, and jQuery.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="https://and-rasta.github.io/Word-Guess-Game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
@@ -146,6 +147,7 @@
                 <div class="card-body">
                   <p class="card-text"><strong>Project # 5</strong><br></a>
                     Build a JavaScript Trivia Game</p>
+                    <p>Use HTML, CSS, Bootstrap CSS Framework, JavaScript, and jQuery.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/TriviaGame/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
@@ -161,7 +163,8 @@
                   <a href="https://and-rasta.github.io/GifTastic/"><img class="card2" img src="images/giphy.jpg" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text"><strong>Project # 6</strong><br></a>
-                    Use GIPHY API to build a dynamic gif search page. Call the API & use JavaScript & jQuery to update the site HTML</p>
+                    <p>Build a dynamic GIF search page.</p>
+                    <p>Use GIPHY API; Call the API & use JavaScript & jQuery to update the site HTML.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/GifTastic/"> <button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
@@ -211,6 +214,7 @@
                 <div class="card-body">
                   <p class="card-text"><strong>Project # 9</strong><br></a>
                     LIRI Bot</p>
+                    <p>Build a CLI application using JavaScript, Moment.js, DotEnv, Node-Spotify-Api and Axios with multiple API Calls.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
@@ -227,7 +231,8 @@
                     <a href="https://and-rasta.github.io/Bamazon/"><img class="card2" img src="images/bamazon.jpg" alt="Card image cap">
                   <div class="card-body">
                     <p class="card-text"><strong>Project # 10</strong><br></a>
-                      Bamazon</p>  
+                      Bamazon CLI App</p>  
+                      <p>Build a CLI application using JavaScript, Node.js, MySQL, and MySQL and Inquirer Node Modules.</p>                     
                   <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
@@ -241,10 +246,11 @@
 
               <div class="col-md-4">
                   <div class="card mb-4 shadow-sm">
-                      <a href="https://and-rasta.github.io/Frens/"><img class="card2" img src="images/dothrakify.JPG" alt="Card image cap">
+                      <a href="https://and-rasta.github.io/Frens/"><img class="card2" img src="images/fren.JPG" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text"><strong>Project # 11</strong><br></a>
                         Fren Finder</p>
+                        <p>Build a web application to match friends, using JavaScrtipt, jQuery, HTML, CSS, Bootstrap CSS Framework, Node.js, and Express.js. Deploy to Heroku.</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                           <a href="https://polar-beach-64550.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
@@ -261,6 +267,7 @@
                       <div class="card-body">
                         <p class="card-text"><strong>Project # 12</strong><br></a>
                           Burger</p>  
+                          <p>Build a web application to add/devour burgers, using HTML, CSS/Bootstrap CSS Framework, Node.js, Express.js, Handlebars.js, and MySQL. Deploy to Heroku.</p>
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
                             <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
