--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
               <div class="col-md-4">
                   <div class="card mb-4 shadow-sm">
-                      <a href="https://and-rasta.github.io/Frens/"><img class="card2" img src="images/fren.JPG" alt="Card image cap">
+                      <a href="https://and-rasta.github.io/Frens/"><img class="card2" img src="images/fren.jpg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text"><strong>Project # 11</strong><br></a>
                         Fren Finder</p>
