updates to repo links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <!-- Link to Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
      crossorigin="anonymous">
-
+<!-- Link to Bootstrap theme -->
+  <link href="bootstrap-theme.css" rel="stylesheet">
+  <!-- Link to FontAwesome css -->
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
@@ -84,7 +87,7 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="https://and-rasta.github.io/Basic-Portfolio/index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">09/22/18</small>
                   </div>
@@ -100,7 +103,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/Bootstrap-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/Bootstrap-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">09/29/18</small>
                   </div>
@@ -117,7 +120,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="https://and-rasta.github.io/Word-Guess-Game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/Word-Guess-Game"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/Word-Guess-Game"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">10/06/18</small>
                   </div>
@@ -134,7 +137,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/unit-4-game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/unit-4-game"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/unit-4-game"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">10/13/18</small>
                   </div>
@@ -151,7 +154,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/TriviaGame/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/TriviaGame"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/TriviaGame"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">10/20/18</small>
                   </div>
@@ -185,7 +188,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/TrainScheduler/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/TrainScheduler"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/TrainScheduler"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">11/03/18</small>
                   </div>
@@ -201,7 +204,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/Dothrakify/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/Dothrakify"> <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/Dothrakify"> <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">11/10/18</small>
                   </div>
@@ -218,7 +221,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button>
                     </div>
                     <small class="text-muted">11/28/18</small>
                   </div>
@@ -254,7 +257,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                           <a href="https://polar-beach-64550.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                          <a href="https://github.com/And-Rasta/Frens"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                          <a href="https://github.com/And-Rasta/Frens"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                         </div>
                         <small class="text-muted">12/22/18</small>
                       </div>
@@ -271,7 +274,7 @@
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
                             <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                            <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                            <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                           </div>
                           <small class="text-muted">1/12/19</small>
                         </div>
@@ -287,7 +290,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                               <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                              <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                              <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                             </div>
                             <small class="text-muted">1/26/19</small>
                           </div>
@@ -321,7 +324,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                   <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                                  <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                                  <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                                 </div>
                                 <small class="text-muted">2/16/19</small>
                               </div>
