updates to repo links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Link to Bootstrap theme -->
   <link href="bootstrap-theme.css" rel="stylesheet">
   <!-- Link to FontAwesome css -->
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <link href="font-awesome.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
