--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <!-- Link to Bootstrap theme -->
   <link href="bootstrap-theme.css" rel="stylesheet">
   <!-- Link to FontAwesome css -->
-  <link href="font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
