--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
      crossorigin="anonymous">
 <!-- Link to Bootstrap theme -->
-  <link href="bootstrap-theme.css" rel="stylesheet">
+  <!-- <link href="bootstrap-theme.css" rel="stylesheet"> -->
   <!-- Link to FontAwesome css -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -88,7 +88,7 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="https://and-rasta.github.io/Basic-Portfolio/index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-info"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">09/22/18</small>
                   </div>
@@ -172,7 +172,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/GifTastic/"> <button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/GifTastic"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                      <a href="https://github.com/And-Rasta/GifTastic"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
                     </div>
                     <small class="text-muted">10/27/18</small>
                   </div>
